--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ requires-python = ">=3.10"
 dependencies = [
     "httpx>=0.27",
     "mcp[cli]>=1.0",
+    "sqlalchemy[asyncio]>=2.0",
+    "asyncpg>=0.29",
+    "alembic>=1.13",
+    "psycopg2-binary>=2.9",
 ]
 
 [project.scripts]
