--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ license = { text = "GPL-3.0" }
 requires-python = ">=3.10"
 dependencies = [
     "httpx>=0.27",
+    "websockets>=13.0",
     "mcp[cli]>=1.0",
     "sqlalchemy[asyncio]>=2.0",
     "asyncpg>=0.29",
