--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,3 +35,6 @@ packages = ["forge_bridge"]
 [tool.ruff]
 line-length = 100
 target-version = "py310"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
